# xrandr-brightness-gtk4-gui

./: Cargo.toml  LICENSE  PKGBUILD  README.md  xbgg.desktop
src/: gtk4_custom.rs  main.rs  xrandr_binds.rs
